Closed Bug 19083 Opened 26 years ago Closed 26 years ago

[BLOCKER] System hangs on trying to compose message

Categories

(MailNews Core :: Composition, defect, P3)

defect

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: shrir, Assigned: sspitzer)

Details

Using today's latest commercial build on MAC, located at: ftp://sweetlou/products/client/seamonkey/macos/8.x/ppc/1999-11-17-08-M12/netscap e5-mac-M12.sea.bin Please try the following: Install and launch the browser Click on the "Tasks| Mail" menu option. Set up a new Mail account if you do not have one already. Click OK.The Mail Window opens up. Select the newly created account from the Mail Folders window on the left. Now click on the "New Message" icon on top. Observe that a "Compose" window opens up. Type a emaila ddress in the "To" field and press ENTER key on the keyboard. Observe that the cursor blinks on the "To" field as well as the field below it at the same time. Now point the mouse in the "Subject" field and click to enter text in the field. Observe that the cursor blinks in this field too. Now , focus the mouse pointer in the Textarea to write a message and click the mouse button. Observe that the browser closes and the system hangs. To launch the browser again, I have to restart the computer. The cursor blinking problem mentioned above is also observed on Linux, but message can be composed and sent without any crash on Linux.
Assignee: ducarroz → sspitzer
jfd, seeing as that I'm mail-news sheriff today, I can look into this. assigning to me.
adding jfd to the cc list.
I've got a stack trace, I'll post it now. it's in editor, adding kin, buster, akkana, and sfraser to the cc list. stack trace coming soon...
here's the stack. I've lost it now, but the console said something about derefernceing a null com pointer. I'm still working on it... 00000000 PPC 0C570B84 0D1453C0 PPC 0C56C448 main+0013C 0D145340 PPC 0C56AEA8 main1(int, char**)+00550 0D145270 PPC 0B88BAF8 nsAppShellService::Run()+00020 0D145230 PPC 0B85D570 nsAppShell::Run()+00050 0D1451B0 PPC 0B85DE70 nsMacMessagePump::DoMessagePump()+00044 0D145160 PPC 0B85E060 nsMacMessagePump::DispatchEvent(int, EventRecord*)+ 00070 0D145110 PPC 0B85EABC nsMacMessagePump::DoKey(EventRecord&)+00034 0D1450C0 PPC 0B85EEB0 nsMacMessagePump::DispatchOSEventToRaptor(EventRecord&, GrafPort *)+0004C 0D145070 PPC 0B85877C nsMacMessageSink::DispatchOSEvent(EventRecord&, GrafPort*)+00048 0D145030 PPC 0B85102C nsMacWindow::HandleOSEvent(EventRecord&)+0004C 0D144FD0 PPC 0B851F10 nsMacEventHandler::HandleOSEvent(EventRecord&)+00050 0D144F80 PPC 0B85332C nsMacEventHandler::HandleKeyEvent(EventRecord&)+ 0012C 0D144EF0 PPC 0B8382A0 nsWindow::DispatchWindowEvent(nsGUIEvent&)+00028 0D144EB0 PPC 0B8381AC nsWindow::DispatchEvent(nsGUIEvent*, nsEventStatus& )+000A8 0D144E60 PPC 0B97A9B4 HandleEvent(nsGUIEvent*)+00064 0D144E10 PPC 0B977118 nsViewManager::DispatchEvent(nsGUIEvent*, nsEventStatus&)+007C4 0D144C30 PPC 0B97C928 nsView::HandleEvent(nsGUIEvent*, unsigned int, nsEventStatus&, i nt&)+00160 0D144BB0 PPC 0B97C928 nsView::HandleEvent(nsGUIEvent*, unsigned int, nsEventStatus&, i nt&)+00160 0D144B30 PPC 0B97C928 nsView::HandleEvent(nsGUIEvent*, unsigned int, nsEventStatus&, i nt&)+00160 0D144AB0 PPC 0B97C9B8 nsView::HandleEvent(nsGUIEvent*, unsigned int, nsEventStatus&, i nt&)+001F0 0D144A30 PPC 0BF89324 PresShell::HandleEvent(nsIView*, nsGUIEvent*, nsEventStatus&)+00 458 0D1449A0 PPC 0C0BB9A0 nsHTMLHtmlElement::HandleDOMEvent(nsIPresContext&, nsEvent*, nsI DOMEvent**, unsigned int, nsEventStatus&)+00058 0D144960 PPC 0BF6B674 nsDocument::HandleDOMEvent(nsIPresContext&, nsEvent* , nsIDOMEven t**, unsigned int, nsEventStatus&)+00100 0D1448F0 PPC 0C03C624 nsEventListenerManager::HandleEvent(nsIPresContext&, nsEvent*, n sIDOMEvent**, unsigned int, nsEventStatus&)+0093C 0D144790 PPC 0C3B8FC8 nsTextEditorKeyListener::KeyPress(nsIDOMEvent*)+ 005DC 0D1446D0 PPC 0C3C58AC nsHTMLEditor::EditorKeyPress(nsIDOMKeyEvent*)+0026C 0D144530 PPC 0C4366C8 nsHTMLEditorLog::TypedText(const nsString&, int)+ 000CC 0D1444D0 PPC 0C3C5A1C nsHTMLEditor::TypedText(const nsString&, int)+000EC 0D144440 PPC 0C4367EC nsHTMLEditorLog::InsertText(const nsString&)+000AC 0D1443F0 PPC 0C3CCA58 nsHTMLEditor::InsertText(const nsString&)+00538 0D144210 PPC 0C3FEDB0 nsHTMLEditRules::DidDoAction(nsIDOMSelection*, nsRulesInfo*, uns igned int)+00080 0D1441C0 PPC 0C413648 nsHTMLEditRules::CleanUpSelection(nsIDOMSelection*)+ 00058 0D144060 PPC 0C40D660 nsQueryInterface::nsQueryInterface(nsISupports*, unsigned int*)+ 478C0 0D143F40 PPC 0C40CC1C nsQueryInterface::nsQueryInterface(nsISupports*, unsigned int*)+ 46E7C 0D143E80 PPC 0C40BC2C nsHTMLEditRules::IsFirstNode(nsIDOMNode*)+000A0 0D143E00 PPC 0FA6532C nsDebug::PreCondition(const char*, const char*, const char*, int )+00040
note this happens with html messages, not plain text.
OS: Mac System 8.5 → All
Hardware: PC → All
marking all. its on pc and unix too.
got a bulletproofing fix in hand, more may need to be done. here's a patch to prevent the crash. re-assigning to the editor folks for a real fix. Index: base/nsHTMLEditRules.cpp =================================================================== RCS file: /cvsroot/mozilla/editor/base/nsHTMLEditRules.cpp,v retrieving revision 1.70 diff -r1.70 nsHTMLEditRules.cpp 2012a2013,2015 > > if (!parent) return PR_TRUE; > can someone review that before I check it in?
This is really a joe problem.
Status: NEW → RESOLVED
Closed: 26 years ago
Resolution: --- → FIXED
Target Milestone: M12
marking fixed. I'll send an email to joe.
QA Contact: lchiang → fenella
fenella - can you help to verify? Thanks.
Status: RESOLVED → VERIFIED
Sure. No problem. using Mac build (1999-11-22-08 M12) IMAP/POP: Compose and send works fine. Linux (1999-11-22-08 M12) Win_nt 4.0 (1999-11-22-08 M12) I also try it on Linux and Win_nt. They work fine too.
Product: MailNews → Core
Product: Core → MailNews Core
You need to log in before you can comment on or make changes to this bug.