fix for blocker bug #19083, compose html message causes a crash. r=sfraser.